// Copyright 2023 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.auditlog;
option go_package = "github.com/bucketeer-io/bucketeer/proto/auditlog";

import "google/protobuf/any.proto";

import "proto/event/domain/event.proto";
import "proto/event/domain/localized_message.proto";

message AuditLog {
  string id = 1;
  int64 timestamp = 2;
  bucketeer.event.domain.Event.EntityType entity_type = 3;
  string entity_id = 4;
  bucketeer.event.domain.Event.Type type = 5;
  google.protobuf.Any event = 6;
  bucketeer.event.domain.Editor editor = 7;
  bucketeer.event.domain.Options options = 8;
  bucketeer.event.domain.LocalizedMessage localized_message = 9;
}
